Fix nav button alignment

--- a/less/experience.less
+++ b/less/experience.less
@@ -40,7 +40,7 @@
         
         p {
             padding: 5%;
-            ;
+            text-align:justify;
         }
     }
 
