--- a/less/nav.less
+++ b/less/nav.less
@@ -43,10 +43,9 @@
 }
 
 svg{
-    min-height: 50px;
-    min-width: 50px;
-    max-height: 60px;
-    max-width: 60px;
+    height: 40px;
+    width: 40px;
+    margin: auto;
 }
 .hamburger{
     background-color: #1282a280;
@@ -100,9 +99,10 @@ and (max-device-width: 800px)
             min-width: fit-content;
             h1{
                 padding-top: 3%;
-                font-size: medium;
+                font-size: larger;
             }
             button{
+                margin:auto;
                 font-size: x-small;
             }
         }
