--- a/public/style.css
+++ b/public/style.css
@@ -62,10 +62,9 @@ li {
   font-size: small;
 }
 svg {
-  min-height: 50px;
-  min-width: 50px;
-  max-height: 60px;
-  max-width: 60px;
+  height: 40px;
+  width: 40px;
+  margin: auto;
 }
 .hamburger {
   background-color: #1282a280;
@@ -113,9 +112,10 @@ svg {
   }
   .navBar div h1 {
     padding-top: 3%;
-    font-size: medium;
+    font-size: larger;
   }
   .navBar div button {
+    margin: auto;
     font-size: x-small;
   }
   .theme {
@@ -260,6 +260,7 @@ nav a {
 }
 .experiencePage .story p {
   padding: 5%;
+  text-align: justify;
 }
 .experiencePage .experience {
   padding: 2%;
